fix total block padding on tablet

--- a/src/components/OrderPage/OrderPage.scss
+++ b/src/components/OrderPage/OrderPage.scss
@@ -52,8 +52,8 @@
       margin-right: 0;
     }
     &__total {
+      padding-top: 0px;
       padding-left: 0px;
-      border-left: none;
       flex: 0 1 auto;
     }
     &__delimetr {
